# autonomous_agents_latent_alignment

./: .gitignore  ENCODER_USAGE.md  GIT_COMMIT_CHECKLIST.md  OPTIONAL_DEPENDENCIES.md  QUICK_START.md  README.md  SCIL_SAPS_report.md  SETUP.md  ppo_atari_lstm.py  pyproject.toml  setup_cuda.sh
model/: agent.py
utils/: preprocess_env.py  preprocess_utils.py
