[project]
name = "autonomous-agents-latent-alignment"
version = "0.1.0"
description = "R3L: Relative Representations for Reinforcement Learning with SCIL and SAPS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "gymnasium>=0.29.0",
    "numpy>=1.24.0,<2.0.0",
    "tyro>=0.5.0",
    "tensorboard>=2.13.0",
    "wandb>=0.15.0",
    "matplotlib>=3.7.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",
    "ale-py>=0.8.0",
    "shimmy[gym-v21]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.black]
line-length = 120
target-version = ["py310", "py311"]
